--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=MagicWarProject
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Blueprints/MenuLevel.MenuLevel
-GameDefaultMap=/Game/Blueprints/TestMap.TestMap
+GameDefaultMap=/Game/Blueprints/MenuLevel.MenuLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
